attempt at fixing Y overflow on mobile

--- a/src/components/PlayerSide.module.scss
+++ b/src/components/PlayerSide.module.scss
@@ -6,6 +6,8 @@
     height: 33.33%;
     width: 100%;
 
+    overflow: hidden;
+
     &::after {
         content: '';
         position: absolute;
